# labforge

./: .gitignore  INTEGRATIONS.md  README.md  RESEARCH.md  SOURCES.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
data/: research_2026-06.json
examples/: help.txt
labforge/: __init__.py  cli.py  compat.py  connect.py  detect.py  fit.py  hardware.py  interop.py  procure.py
tests/: test_connect.py  test_smoke.py
